--- a/src/index.css
+++ b/src/index.css
@@ -7,5 +7,34 @@
 }
 
 body {
-  background-color: blue;
+  background-color: #1b2628;
+}
+
+.upperClouds {
+  position: fixed;
+  top: 50px;
+  left: 50%;
+  transform: translateX(-50%);
+  max-width: 100%;
+  opacity: 0.8;
+  pointer-events: none;
+}
+
+.underClouds {
+  position: fixed;
+  bottom: 90px;
+  left: 50%;
+  transform: translateX(-50%);
+  max-width: 100%;
+  opacity: 0.9;
+  pointer-events: none;
+}
+
+h2 {
+  font-family: "StarlightRune";
+  color: #d5b993;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
 }
