--- a/src/index.css
+++ b/src/index.css
@@ -29,12 +29,25 @@ body {
   opacity: 0.9;
   pointer-events: none;
 }
+h1 {
+  color: #d5b993;
+  text-align: center;
+  font-family: Playfair;
+  font-size: 34px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 80px; /* 235.294% */
+}
 
 h2 {
   font-family: "StarlightRune";
-  color: #d5b993;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  
+  background: linear-gradient(
+    97deg,
+    #a28d70 17.84%,
+    #d5b993 41.62%,
+    #6f604d 91.19%
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
