--- a/src/StyleSheets/HomeScreen.css
+++ b/src/StyleSheets/HomeScreen.css
@@ -1,20 +1,25 @@
 .inicio {
-  font-family: "StarlightRune";
+  font-family: "StarlightRune", sans-serif;
   text-align: center;
-  font-size: 110px;
+  font-size: clamp(3rem, 6vw, 5rem);
   font-style: normal;
   font-weight: 400;
-  line-height: 100px;
-  padding-bottom: 30px;
+  line-height: 1.1;
+  padding-bottom: 1.5rem;
   background: linear-gradient(
     97deg,
-    var(--Colores-Primary_Medium, #a28d70) 17.84%,
-    var(--Colores-Primary_Light, #d5b993) 41.62%,
-    var(--Colores-Primary_strong, #6f604d) 91.19%
+    #a28d70 17.84%,
+    #d5b993 41.62%,
+    #6f604d 91.19%
   );
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+
+.subtitulo {
+  font-size: clamp(1.25rem, 4vw, 2rem);
+  line-height: 1.3;
 }
 
 .estrella {
@@ -30,21 +35,21 @@
 }
 
 .respuestaHomescreen {
-  color: var(--Text_option-Text_color, #000);
+  color: #000;
   text-align: center;
   -webkit-text-stroke-width: 3px;
-  -webkit-text-stroke-color: var(--Text_option-Stroke_color, #d5b993);
+  -webkit-text-stroke-color: #d5b993;
   font-family: "Starlight Rune - Personal Use";
-  font-size: 110px;
+  font-size: clamp(2rem, 5vw, 5.875rem);
   font-style: normal;
   font-weight: 400;
-  line-height: 100px; /* 90.909% */
-  padding: 90px 80px;
+  line-height: 1;
+  padding: 4rem;
+  transition: all 0.7s ease-in-out;
 }
 
 .respuestaHomescreen:hover {
   -webkit-text-stroke-width: 1px;
-  -webkit-text-stroke-color: var(--Text_option-Stroke_color, #000);
+  -webkit-text-stroke-color: #000;
   cursor: pointer;
-  transition: all 0.7s ease-in-out;
 }
