--- a/src/StyleSheets/HomeScreen.css
+++ b/src/StyleSheets/HomeScreen.css
@@ -21,7 +21,11 @@
   font-size: clamp(1.25rem, 4vw, 2rem);
   line-height: 1.3;
 }
-
+.bolaManos {
+  filter: drop-shadow(0px 0px 15px #d5b993);
+  transform: scale(1.1);
+  z-index: 1;
+}
 .estrella {
   position: absolute;
   opacity: 0;
