--- a/src/StyleSheets/Estrellas.css
+++ b/src/StyleSheets/Estrellas.css
@@ -19,3 +19,10 @@
     opacity: 1;
   }
 }
+
+@media (max-width: 768px) {
+  .estrella-wrapper {
+    transform: scale(0.5);
+    opacity: 0.7;
+  }
+}
