--- a/src/StyleSheets/FrasesScreen.css
+++ b/src/StyleSheets/FrasesScreen.css
@@ -55,17 +55,20 @@
 
 @media (max-width: 768px) {
   .ojoSticker {
-    top: -100px;
+    top: -80px;
+    transform: scale(60%);
   }
 
   .fraseRandom {
     font-size: clamp(2rem, 6vw, 5.875rem);
     padding-bottom: 2rem;
+    width: 80%;
   }
   .botonInicio {
     width: 150px;
     font-size: 24px;
     line-height: 40px;
     margin-top: 80px;
+    transform: scale(0.8);
   }
 }
