--- a/src/StyleSheets/RespuestasScreen.css
+++ b/src/StyleSheets/RespuestasScreen.css
@@ -16,7 +16,6 @@
 
 .Pregunta {
   line-height: 1.2;
-  
 }
 
 .Pregunta::first-letter {
@@ -29,8 +28,14 @@
 }
 
 @media (max-width: 768px) {
+  .respuesta-screen {
+    transform: scale(0.9);
+  }
+
   .h1Respuesta,
   .RespuestaTexto {
     font-size: 55px;
+    text-align: center;
+    padding: 1rem;
   }
 }
