--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ body {
 }
 
 .upperClouds {
-  position: fixed;
+  position: absolute;
   top: 3px;
   left: 50%;
   width: 95%;
@@ -25,15 +25,8 @@ body {
   pointer-events: none;
 }
 
-.fondoEstrellas {
-  position: fixed;
-  margin-top: 20px;
-  width: 70%;
-  pointer-events: none;
-}
-
 .underClouds {
-  position: fixed;
+  position: absolute;
   bottom: 3px;
   left: 50%;
   width: 95%;
@@ -41,4 +34,16 @@ body {
   max-width: 100%;
   opacity: 0.9;
   pointer-events: none;
+}
+
+@media (max-width: 768px) {
+  html,
+  body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+  }
+.underClouds{
+  margin: 30px 0;
+}
 }
