--- a/src/StyleSheets/HomeScreen.css
+++ b/src/StyleSheets/HomeScreen.css
@@ -31,7 +31,8 @@
   opacity: 0;
   transition: opacity 0.7s ease;
   z-index: 0;
-  margin-bottom: 15px;
+  margin: 10px;
+  
 }
 
 .boton:hover .estrella {
@@ -61,20 +62,21 @@
 @media (max-width: 768px) {
   /* Estilos para pantallas pequeñas */
   .home-screen {
-    padding: 3rem;
+    padding: 0.5rem;
   }
   .inicio {
     font-size: clamp(2.5rem, 6vw, 4rem);
   }
   .subtitulo {
     font-size: clamp(1.25rem, 4vw, 1.5rem);
+    padding: 1rem;
   }
   .respuestaHomescreen {
-    font-size: clamp(1.5rem, 5vw, 3.5rem);
+    font-size: 2rem;
     padding: 1rem;
   }
 
   .bolaManos {
-    transform: scale(80%);
+    transform: scale(75%);
   }
 }
