--- a/src/StyleSheets/HomeScreen.css
+++ b/src/StyleSheets/HomeScreen.css
@@ -61,8 +61,7 @@
 @media (max-width: 768px) {
   /* Estilos para pantallas pequeñas */
   .home-screen {
-    height: 85vh;
-    padding: 0.5rem;
+    padding: .5rem;
   }
   .inicio {
     font-size: clamp(2.5rem, 6vw, 4rem);
