--- a/src/StyleSheets/OraculoScreen.css
+++ b/src/StyleSheets/OraculoScreen.css
@@ -14,7 +14,7 @@
   font-size: clamp(2.5rem, 7vw, 6.875rem);
   font-style: normal;
   line-height: 1;
-  padding-bottom: 30px;
+  padding-bottom: 2.5rem;
   background: linear-gradient(
     97deg,
     var(--Colores-Primary_Medium, #a28d70) 17.84%,
@@ -32,7 +32,6 @@ h2 {
   font-size: clamp(1.25rem, 4vw, 2rem);
   font-style: normal;
   line-height: 1;
-  
 }
 
 .cajaPregunta {
@@ -102,6 +101,7 @@ h2 {
 
   .h1screenoraculo {
     font-size: 55px;
+    padding-bottom: 1rem;
   }
 
   .botonPreguntar {
