--- a/src/StyleSheets/RespuestasScreen.css
+++ b/src/StyleSheets/RespuestasScreen.css
@@ -28,14 +28,14 @@
 }
 
 @media (max-width: 768px) {
-  .respuesta-screen {
-    transform: scale(0.9);
-  }
-
   .h1Respuesta,
   .RespuestaTexto {
     font-size: 55px;
     text-align: center;
     padding: 1rem;
+  }
+
+  .bola-y-texto {
+    transform: scale(0.8);
   }
 }
