--- a/src/StyleSheets/HomeScreen.css
+++ b/src/StyleSheets/HomeScreen.css
@@ -60,7 +60,7 @@
 
 @media (max-width: 768px) {
   .home-screen {
-    padding: .5rem;
+    padding: 0.5rem;
   }
   .inicio {
     font-size: clamp(2.5rem, 6vw, 4rem);
@@ -81,5 +81,13 @@
 
   .bolaManos {
     transform: scale(75%);
+    filter: none;
+  }
+
+  .bolaManos:hover {
+    transform: scale(1);
+    transition: transform 0.9s ease-in-out;
+    z-index: 1;
+    filter: drop-shadow(0px 0px 20px #d5b993);
   }
 }
