--- a/src/StyleSheets/HomeScreen.css
+++ b/src/StyleSheets/HomeScreen.css
@@ -64,15 +64,16 @@
   }
   .inicio {
     font-size: clamp(2.5rem, 6vw, 4rem);
-    padding: 16px 25px;
+    margin-top: 20px;
+    padding: 0px 25px;
   }
   .subtitulo {
     font-size: 1rem;
-    padding: 1rem;
+
     margin: 1rem;
   }
   .containerBolaManos {
-    transform: scale(0.8);
+    transform: scale(0.7);
   }
   .respuestaHomescreen {
     font-size: 2rem;
@@ -85,7 +86,6 @@
   }
 
   .bolaManos:hover {
-   
     z-index: 1;
     filter: drop-shadow(0px 0px 20px #d5b993);
   }
