--- a/src/StyleSheets/HomeScreen.css
+++ b/src/StyleSheets/HomeScreen.css
@@ -22,8 +22,8 @@
   line-height: 1.2;
 }
 .bolaManos {
+  scale: 0.9;
   filter: drop-shadow(0px 0px 15px #d5b993);
-  transform: scale(1.1);
   z-index: 1;
 }
 .estrella {
@@ -64,7 +64,7 @@
   }
   .inicio {
     font-size: clamp(2.5rem, 6vw, 4rem);
-    margin-top: 20px;
+    margin-top: 35px;
     padding: 0px 25px;
   }
   .subtitulo {
@@ -73,7 +73,7 @@
     margin: 1rem;
   }
   .containerBolaManos {
-    transform: scale(0.7);
+    transform: scale(0.8);
   }
   .respuestaHomescreen {
     font-size: 2rem;
@@ -82,11 +82,5 @@
 
   .bolaManos {
     transform: scale(0.8);
-    filter: none;
-  }
-
-  .bolaManos:hover {
-    z-index: 1;
-    filter: drop-shadow(0px 0px 20px #d5b993);
   }
 }
