--- a/src/StyleSheets/HomeScreen.css
+++ b/src/StyleSheets/HomeScreen.css
@@ -24,6 +24,7 @@
   scale: 0.9;
   filter: drop-shadow(0px 0px 15px #d5b993);
   z-index: 1;
+  height: auto;
 }
 .estrella {
   position: absolute;
@@ -72,7 +73,7 @@
     margin: 1rem;
   }
   .containerBolaManos {
-    scale: 0.9;
+    transform: scale(0.9);
   }
   .respuestaHomescreen {
     font-size: 2rem;
