none filter on small devices

--- a/src/StyleSheets/HomeScreen.css
+++ b/src/StyleSheets/HomeScreen.css
@@ -75,6 +75,9 @@
   .containerBolaManos {
     transform: scale(0.9);
   }
+  .bolaManos {
+    filter: none;
+  }
   .respuestaHomescreen {
     font-size: 2rem;
     padding: 1rem;
