--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,19 @@
   color: #d5b993;
 }
 
+.music {
+  position: absolute;
+  left: 30px;
+  transition: transform 0.3s ease, opacity 0.3s ease;
+  opacity: 0.8;
+  padding: 1rem;
+}
+
+.music:hover {
+  transform: scale(1.1);
+  opacity: 1;
+}
+
 @media (max-width: 768px) {
   html,
   body {
@@ -27,6 +40,9 @@
   .app-screen {
     height: 100dvh;
     overflow-y: hidden;
+  }
+  .music {
+    bottom: 100px;
   }
 
   .creditos {
